# WaterWorks-Academy-v2

./: LICENSE  README.md  add.py  app.py  models.py  pyproject.toml
static/scripts/: menu.js
templates/: about.html  card.html  contact.html  course-detail.html  course-list.html  enrollement.html  index.html  lesson-view.html  login.html  login1.html  module-view.html  register.html  sample.html
